--- a/public/css/create.css
+++ b/public/css/create.css
@@ -70,7 +70,8 @@ html { scroll-behavior: smooth;}
     height: 100%;
     background: linear-gradient(#315166, #162735);
     z-index: 1;
-    padding: 0 15.5%;
+    /* padding: 0 15.5%; */
+    margin: 0 auto;
 }
 
 /* main-top */
@@ -84,30 +85,56 @@ html { scroll-behavior: smooth;}
     margin-bottom: 50px;
 }
 
-.main-top h2 {
-    margin-bottom: 10px;
-}
+@media screen and (max-width:1100px){
 
-.glass {
-    height: 80px;
+}
+@media screen and (max-width:960px){
+    .main-top {
+        padding-top: 30px;
+        margin-bottom: 30px;
+    }
 }
 
 .main-top h2 {
     font-size: 30px;
     text-align: center;
     color: white;
+    margin-bottom: 10px;
     /* padding-top: 89px; */
 }
+@media screen and (max-width:960px){
+    .main-top h2 {
+        font-size: 20px;
+    }
+}
+
+.glass {
+    height: 80px;
+}
+
+@media screen and (max-width:1100px){
+    .glass {
+        height: 50px;
+    }
+}
+
+
 
 /* form */
 
 .input-form-outside {
-    /* width: 971px; */
+    width: 1050px;
     height: 1130px;
     background: linear-gradient(#B69E82, #483E34);
     z-index: 10;
-    /* padding: 42px 39px 0 39px; */
+    margin: 0 auto;
     padding-top: 42px;
+}
+@media screen and (max-width:1100px){
+    .input-form-outside {
+        width: auto;
+        margin: 0 30px;
+    }
 }
 
 .input-form {
@@ -119,6 +146,13 @@ html { scroll-behavior: smooth;}
     z-index: 20;
     margin: 0 auto;
 }
+@media screen and (max-width:1100px){
+    .input-form {
+        width: auto;
+        margin: 0 40px;
+    }
+}
+
 
 /* form-top */
 
@@ -133,11 +167,11 @@ html { scroll-behavior: smooth;}
 .top-left {
     width: 41%;
     height: 510px;
+    margin: 10px 30px 0 104px;
 }
 
 .top-left-container {
-
-    margin: 10px 30px 0 104px;
+    /* margin: 10px 30px 0 104px; */
 }
 
 #preview {
