--- a/public/css/create.css
+++ b/public/css/create.css
@@ -4,7 +4,7 @@ html { scroll-behavior: smooth;}
 
 /* header */
 
-.header {
+/* .header {
     width: 100%;
     height: 100px;
     background: linear-gradient(#315369, #315166);
@@ -24,7 +24,7 @@ html { scroll-behavior: smooth;}
     color: #FCE4E7;
     text-decoration: none;
     display: block;
-    margin: 0 28px 0 54px;
+    margin: 0 30px 0 54px;
     transition: all 0.3s;
 }
 
@@ -33,7 +33,7 @@ html { scroll-behavior: smooth;}
     color: #FCE4E7;
     text-decoration: none;
     display: block;
-    margin: 0 29px;
+    margin: 0 30px;
     transition: all 0.3s;
 }
 
@@ -55,13 +55,20 @@ html { scroll-behavior: smooth;}
     transition: all 0.3s;
 }
 
+@media screen and (max-width:1100px){
+    .menu {
+        font-size: 14px;
+        margin: 0 25px 0 40px;
+    }
+}
+
 .item a:hover {
     opacity: 0.5;
 }
 
 .container {
     width: 1510px;
-}
+} */
 
 /* main */
 
@@ -176,6 +183,12 @@ html { scroll-behavior: smooth;}
     /* margin: 10px 30px 0 104px; */
 }
 
+@media screen and (max-width:1100px){
+    .top-left{
+        width: 50%;
+    }
+}
+
 .top-left-container {
     /* margin: 10px 30px 0 104px; */
     width: auto;
@@ -214,6 +227,13 @@ html { scroll-behavior: smooth;}
     border-radius: 2.5em; /* 角の丸み */
     transition: 0.2s; /* ホバーをなめらかに */
   }
+
+@media screen and (max-width:1100px){
+    .upload-label {
+        /* font-size: 15px; */
+    }
+}
+
   /* ホバー時 */
   .upload-label:hover {
     box-shadow: 0 8px 10px -2px rgba(0, 0, 0, 0.2); /* 影を表示 */
@@ -227,13 +247,13 @@ html { scroll-behavior: smooth;}
 
 .top-right {
     width: 59%;
-    margin-right: 105px;
+    /* margin-right: 105px; */
 }
 
 @media screen and (max-width:1100px){
     .top-right {
-        /* width: 420px; */
-        margin-right: 40px;
+        width: 50%;
+        margin-right: 85px;
     }
 }
 
@@ -243,6 +263,22 @@ html { scroll-behavior: smooth;}
     justify-content: space-between;
     width: 470px;
     /* margin-right: 20px; */
+}
+
+@media screen and (max-width:1100px){
+    .top-right-container {
+        width: auto;
+    }
+}
+
+.top-right label {
+    padding: auto, 0;
+}
+
+@media screen and (max-width:960px){
+    .top-right label {
+        font-size: 20px;
+    }
 }
 
 .top-right input {
@@ -265,8 +301,9 @@ html { scroll-behavior: smooth;}
 
 @media screen and (max-width:1100px){
     .date input, .name input, .base input, .taste input  {
-        width: 290px;
+        width: 250px;
         height: 33px;
+        font-size: 16px;
     }
 } 
 
@@ -278,6 +315,13 @@ html { scroll-behavior: smooth;}
     border: solid 2px #BAA68B;
 }
 
+@media screen and (max-width:1100px){
+    .featuru textarea {
+        width: 250px;
+        font-size: 16px;
+    }
+}
+
 .date, .name, .base, .taste, .featuru {
     font-size: 23px;
     color: #00577C;
@@ -287,9 +331,9 @@ html { scroll-behavior: smooth;}
     justify-content: space-between;
 }
 
-.top-right label {
-    padding-top: 10px;
-}
+/* .top-right label {
+    padding: auto, 0;
+} */
 
 .date {
     margin-top: 57px;
@@ -314,18 +358,30 @@ html { scroll-behavior: smooth;}
 /* form-middle */
 
 .form-middle, .form-bottom {
-    width: 100%;
+    width: auto;
     height: auto;
-    padding: 0 55px;
+    margin: 0 85px;
     display: flex;
     flex-direction: column;
+}
+
+@media screen and (max-width:1100px){
+    .form-middle, .form-bottom {
+
+    }
 }
 
 .form-middle h4, .form-bottom h4 {
     font-size: 22px;
     color: #00577C;
     text-align: left;
-    margin: 15px 0 0 55px;
+    margin-top: 15px;
+}
+
+@media screen and (max-width:1100px){
+    .form-middle h4, .form-bottom h4 {
+        font-size: 20px;
+    }
 }
 
 .form-bottom textarea, .form-middle textarea {
@@ -338,13 +394,13 @@ html { scroll-behavior: smooth;}
 
 @media screen and (max-width:1100px){
     .form-bottom textarea, .form-middle textarea {
-        width: 610px;
+        width: 100%;
         font-size: 16px;
     }
 }
 
 .comment, .ingredient-text {
-    padding: 0 50px;
+    /* padding: 0 50px; */
 }
 
 /* 登録ボタン */
@@ -361,6 +417,14 @@ html { scroll-behavior: smooth;}
     color: white;
     margin-top: 24px;
     transition: all 0.3s;
+}
+
+@media screen and (max-width:1100px){
+    .register-btn {
+        width: 130px;
+        height: 32px;
+        font-size: 17px;
+    }
 }
 
 .register-btn:hover {
