--- a/public/css/create.css
+++ b/public/css/create.css
@@ -320,6 +320,11 @@ html { scroll-behavior: smooth;}
         width: auto;
     }
 }
+    .top-right-container {
+        width: 350px;
+        margin: 0 auto;
+    }
+}
 
 .top-right label {
     padding: auto, 0;
@@ -392,6 +397,11 @@ html { scroll-behavior: smooth;}
     display: flex;
     justify-content: space-between;
 }
+@media screen and (max-width:960px){
+    .date, .name, .base, .taste, .featuru {
+        /* justify-content: space-around; */
+    }
+}
 
 /* .top-right label {
     padding: auto, 0;
@@ -429,8 +439,10 @@ html { scroll-behavior: smooth;}
 
 @media screen and (max-width:960px){
     .form-middle, .form-bottom {
+        width: 350px;
+        margin: 30px auto 0 auto;
         flex-direction: row;
-        margin: 30px 50px 0 50px;
+        /* margin: 30px 50px 0 50px; */
         justify-content: space-between;
     }
 }
