--- a/public/css/create.css
+++ b/public/css/create.css
@@ -320,6 +320,7 @@ html { scroll-behavior: smooth;}
         width: auto;
     }
 }
+@media screen and (max-width:960px){
     .top-right-container {
         width: 350px;
         margin: 0 auto;
