--- a/public/css/layouts.css
+++ b/public/css/layouts.css
@@ -11,6 +11,16 @@
     background: linear-gradient(#315369, #315166);
     border-bottom: solid 3px #FCE4E7;
 }
+@media screen and (max-width:1100px){
+    .header {
+        height: 85px;
+    }
+}
+@media screen and (max-width:960px){
+    .header {
+        height: 70px;
+    }
+}
 
 .item {
     height: 105px;
@@ -19,6 +29,20 @@
     align-items: center;
     list-style: none;
 }
+
+@media screen and (max-width:1100px){
+    .item {
+        height: 85px;
+    }
+}
+@media screen and (max-width:960px){
+    .item {
+        height: 70px;
+    }
+}
+
+
+
 
 .menu {
     font-size: 16px;
@@ -59,6 +83,27 @@
 .item a:hover {
     color: #FCE4E7;
     opacity: 0.5;
+}
+
+@media screen and (max-width:1100px){
+    .menu {
+        font-size: 15px;
+        margin: 0 25px 0 45px;
+    }
+    .menu2, .menu3, .menu4 {
+        font-size: 15px;
+        margin: 0 25px;
+    }
+}
+@media screen and (max-width:1100px){
+    .menu {
+        font-size: 13px;
+        margin: 0 20px 0 30px;
+    }
+    .menu2, .menu3, .menu4 {
+        font-size: 13px;
+        margin: 0 20px;
+    }
 }
 
 /* footer */
