--- a/public/css/create.css
+++ b/public/css/create.css
@@ -251,6 +251,17 @@ html { scroll-behavior: smooth;}
         height: 310px;
     }
 }
+@media screen and (max-width:520px){
+    #preview {
+        width: 190px;
+        height: 270px;
+    }
+}
+@media screen and (max-width:520px){
+    #preview {
+        margin-top: 30px;
+    }
+}
 
 #preview img {
     width: 100%;
@@ -344,6 +355,11 @@ html { scroll-behavior: smooth;}
 @media screen and (max-width:960px){
     .top-right label {
         font-size: 20px;
+    }
+}
+@media screen and (max-width:520px){
+    .top-right label {
+        font-size: 15px;
     }
 }
 
@@ -501,6 +517,11 @@ html { scroll-behavior: smooth;}
         margin-left: 19px;
     }
 }
+@media screen and (max-width:960px){
+    .form-middle h4, .form-bottom h4 {
+        font-size: 15px;
+    }
+}
 
 .form-bottom textarea, .form-middle textarea {
     width: 755px;
@@ -562,6 +583,13 @@ html { scroll-behavior: smooth;}
         height: 28px;
         margin: 30px 0;
         font-size: 16px;
+    }
+}
+@media screen and (max-width:520px){
+    .register-btn {
+        width: 100px;
+        height: 24px;
+        font-size: 12px;
     }
 }
 
