--- a/public/css/layouts.css
+++ b/public/css/layouts.css
@@ -6,100 +6,111 @@
 /* header */
 
 /*　ハンバーガーボタン　*/
-.hamburger {
-    display : block;
-    position: fixed;
-    z-index : 100;
-    right : 13px;
-    top   : 12px;
-    width : 42px;
-    height: 42px;
-    cursor: pointer;
-    text-align: center;
-  }
-  .hamburger span {
-    display : block;
-    position: absolute;
-    width   : 30px;
-    height  : 2px;
-    left    : 6px;
-    background : #555;
-    -webkit-transition: 0.3s ease-in-out;
-    -moz-transition   : 0.3s ease-in-out;
-    transition        : 0.3s ease-in-out;
-  }
-  .hamburger span:nth-child(1) {
-    top: 10px;
-  }
-  .hamburger span:nth-child(2) {
-    top: 20px;
-  }
-  .hamburger span:nth-child(3) {
-    top: 30px;
-  }
+#global-navi {
+  background:linear-gradient(#315369, #315166);
+  border-bottom: solid 3px #FCE4E7;
+  /* position: fixed; */
+  top: 0;
+  right: 0px;
+  width: 100%;
+}
+#wrapper nav ul li{
+display:inline-block;
+font-size: 16px;
+padding:  30px 20px 25px 28px;
+}
+#wrapper nav ul li a{
+color: #ddd
+}
 
-  /* ナビ開いてる時のボタン */
-.hamburger.active span:nth-child(1) {
-    top : 16px;
-    left: 6px;
-    -webkit-transform: rotate(-45deg);
-    -moz-transform   : rotate(-45deg);
-    transform        : rotate(-45deg);
-  }
-  
-  .hamburger.active span:nth-child(2),
-  .hamburger.active span:nth-child(3) {
-    top: 16px;
-    -webkit-transform: rotate(45deg);
-    -moz-transform   : rotate(45deg);
-    transform        : rotate(45deg);
-  }
-  
-  nav.globalMenuSp {
-    position: fixed;
-    z-index : 2;
-    top  : 0;
-    left : 0;
-    color: #000;
-    background: #fff;
-    text-align: center;
-    transform: translateY(-100%);
-    transition: all 0.6s;
-    width: 100%;
-  }
-  
-  nav.globalMenuSp ul {
-    background: #ccc;
-    margin: 0 auto;
-    padding: 0;
-    width: 100%;
-  }
-  
-  nav.globalMenuSp ul li {
-    list-style-type: none;
-    padding: 0;
-    width: 100%;
-    border-bottom: 1px solid #fff;
-  }
-  nav.globalMenuSp ul li:last-child {
-    padding-bottom: 0;
-    border-bottom: none;
-  }
-  nav.globalMenuSp ul li:hover{
-    background :#ddd;
-  }
-  
-  nav.globalMenuSp ul li a {
-    display: block;
-    color: #000;
-    padding: 1em 0;
-    text-decoration :none;
-  }
-  
-  /* このクラスを、jQueryで付与・削除する */
-  nav.globalMenuSp.active {
-    transform: translateY(0%);
-  }
+@media screen and (max-width: 600px) {
+#wrapper nav {
+  position: fixed;
+  top: 0;
+  right: -300px;
+  width: 300px;
+  height: 100%;
+  padding-top: 50px;
+  background:linear-gradient(#375366, #555b5f);
+  font-size: 16px;
+  box-sizing: border-box;
+  z-index: 2
+}
+#wrapper nav ul li {
+  display:block;
+  padding: 20px 28px
+}
+
+#wrapper nav ul li a {
+  text-decoration: none;
+  color: #ddd
+}
+
+#wrapper .btn-gnavi {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 30px;
+  height: 24px;
+  z-index: 3;
+  box-sizing: border-box;
+  cursor: pointer;
+  -webkit-transition: all 400ms;
+  transition: all 400ms
+}
+
+#wrapper .btn-gnavi span {
+  position: absolute;
+  width: 30px;
+  height: 4px;
+  background: white;
+  border-radius: 10px;
+  -webkit-transition: all 400ms;
+  transition: all 400ms
+}
+
+#wrapper .btn-gnavi span:nth-child(1) {
+  top: 0
+}
+
+#wrapper .btn-gnavi span:nth-child(2) {
+  top: 10px
+}
+
+#wrapper .btn-gnavi span:nth-child(3) {
+  top: 20px
+}
+
+#wrapper .btn-gnavi.open {
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg)
+}
+
+#wrapper .btn-gnavi.open span {
+  background: #fff
+}
+
+#wrapper .btn-gnavi.open span {
+  width: 24px;
+}
+#wrapper .contents section p {
+  position: absolute;
+  top: 50%;
+  width: 30%;
+  line-height: 1.4;
+  font-size: 20px;
+  color: #fff;
+  text-shadow: 0 0 6px #666
+}
+
+#wrapper .contents section:nth-child(odd) p {
+  left: 10%
+}
+
+#wrapper .contents section:nth-child(even) p {
+  right: 10%
+}
+
 
 /* .header {
     width: 100%;
@@ -205,7 +216,7 @@
         font-size: 13px;
         margin: 0 20px;
     }
-} */
+} 
 
 /* footer */
 
@@ -227,8 +238,18 @@
     text-shadow: 3px 3px 3px black;
     font-family: 'せのびゴシック';
 }
+@media screen and (max-width:520px){
+  .footer h3 {
+    font-size: 18px;
+  }
+}
 
 .footer p {
     color: white;
     font-size: 14px;
+}
+@media screen and (max-width:520px){
+  .footer p {
+    font-size: 12px;
+  }
 }
