--- a/public/css/index.css
+++ b/public/css/index.css
@@ -90,234 +90,30 @@
         padding-left: 21px;
     }
 }
-.main-top-right .navbar {
-    background-color: transparent !important;
-}
-.main-top-right .navbar .container-fluid {
-    padding-right: var(--bs-gutter-x, 1rem);
-}
-.navbar .navbar-nav .nav-item:nth-child(2) {
-    margin-left: 18px;
-}
-.navbar .navbar-nav .nav-link {
-    padding: 0;
-    transition: all 0.9s;
-}
-.navbar .navbar-nav .nav-link:hover {
-    opacity: 0.5;
-}
-.navbar .navbar-nav .nav-link img {
-    border-radius: 12px;
-}
-.memory-count {
-    position: absolute;
-    top: -23px;
-    right: 17px;
-    font-family: "ヒラギノ丸ゴ ProN";
-    font-size: 17px;
-    color: #fff;
-}
-@media (min-width: 1550px) {
-    .memory-count {
-        top: -26px;
-        right: 24px;
-        font-size: 18px;
+@media (min-width: 1100px) {
+    .main-top-left h1 {
+        font-size: 28px;
+        padding-left: 19px;
     }
 }
-.memory-count p {
-    margin: 0;
+
+.creat-jump{
+    text-align: right;
 }
-.search-box {
-    margin-left: 15px;
-}
-.search-box .form-control {
-    width: 267px;
-    border: 0;
+
+.main-top-right .memories-record{
+    width: 160px;
+    height: 50px;
     border-radius: 10px;
-    font-family: "ヒラギノ丸ゴ ProN", "FontAwesome";
-    font-size: 18px;
-    background: rgba(255, 255, 255, 0.68);
-    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.4) inset;
+    font-size: 19px;
+    font-family: "せのびレギュラー";
+    background-color: rgba(109, 106, 99, 0.68);
 }
-@media (min-width: 1550px) {
-    .search-box .form-control {
-        width: 305px;
-        font-size: 21px;
-    }
-}
-.search-box .form-control::placeholder {
-    color: #7e6f5a;
+.main-top-right .memories-record:hover {
+    background-color: rgba(145, 141, 133, 0.68);
 }
 
-/* --------------------------------
-          .pagination-top
--------------------------------- */
-.pagination-top {
-    margin-top: 147px;
-}
-@media (min-width: 1550px) {
-    .pagination-top {
-        margin-top: 162px;
-    }
-}
-.pagination {
-    display: flex;
-    white-space: nowrap;
-}
-.pagination-inner {
-    width: 520px;
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-}
-@media (min-width: 1550px) {
-    .pagination-inner {
-        width: 571px;
-    }
-}
-.pagination-page {
-    font-size: 14px;
-    line-height: 1;
-}
-.pagination-page strong,
-.pagination-page a {
-    position: relative;
-    display: inline-block;
-    min-width: 43px;
-    min-height: 43px;
-    margin-right: 18px;
-    text-align: center;
-    box-sizing: border-box;
-    background-color: rgba(255, 255, 255, 0.8);
-}
-@media (min-width: 1550px) {
-    .pagination-page strong,
-    .pagination-page a {
-        min-width: 47px;
-        min-height: 47px;
-        margin-right: 22px;
-    }
-}
-.pagination-page strong:before,
-.pagination-page a:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-    box-sizing: border-box;
-}
-.pagination-page strong {
-    font-weight: 400;
-    opacity: 0.5;
-}
-.pagination-page a {
-    text-decoration: none;
-    transition: all 0.5s;
-}
-.pagination-page a:hover {
-    opacity: 0.5;
-}
-.pagination-page strong span,
-.pagination-page a span {
-    display: block;
-    margin-top: 14px;
-    font-family: "せのびレギュラー";
-    font-size: 17px;
-    color: #355469;
-}
-@media (min-width: 1550px) {
-    .pagination-page strong span,
-    .pagination-page a span {
-        margin-top: 15px;
-        font-size: 19px;
-    }
-}
-.pagination-omission {
-    margin-left: 5px;
-    color: #fff;
-}
-@media (min-width: 1550px) {
-    .pagination-omission {
-        margin-left: 2px;
-        font-size: 18px;
-    }
-}
-.pagination-next,
-.pagination-prev,
-.pagination-last {
-    font-size: 14px;
-    line-height: 1;
-}
-.pagination-next a,
-.pagination-prev a,
-.pagination-last a {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    padding: 9px;
-    font-family: "せのびレギュラー";
-    font-size: 17px;
-    color: #355469;
-    background-color: rgba(255, 255, 255, 0.8);
-    text-decoration: none;
-    box-sizing: border-box;
-    transition: all 0.5s;
-}
-.pagination-next a:hover,
-.pagination-prev a:hover,
-.pagination-last a:hover {
-    opacity: 0.5;
-}
-.pagination-next a {
-    width: 55px;
-    height: 45px;
-    padding-left: 13px;
-}
-@media (min-width: 1550px) {
-    .pagination-next a {
-        width: 60px;
-        height: 48px;
-    }
-}
-.pagination-next a:after,
-.pagination-next a:before,
-.pagination-prev a:after,
-.pagination-prev a:before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-}
-.pagination-next a span {
-    margin-right: 2px;
-}
-.pagination-last {
-    margin-right: 5px;
-    margin-left: -2px;
-}
-@media (min-width: 1550px) {
-    .pagination-last {
-        margin-right: 0;
-        margin-right: 0;
-    }
-}
-.pagination-last a {
-    width: 70px;
-    height: 45px;
-}
-@media (min-width: 1550px) {
-    .pagination-last a {
-        width: 77px;
-        height: 48px;
-    }
-}
-
-/* --------------------------------
+/*--------------------------------
             .cards
 -------------------------------- */
 .cards {
@@ -409,18 +205,6 @@
 }
 
 /* --------------------------------
-        .pagination-bottom
--------------------------------- */
-.pagination-bottom {
-    margin-top: 43px;
-}
-@media (min-width: 1550px) {
-    .pagination-bottom {
-        margin-top: 53px;
-    }
-}
-
-/* --------------------------------
           .page-top-btn
 -------------------------------- */
 .page-top-btn {
@@ -444,6 +228,10 @@
     height: 35px;
     margin: 0 auto;
 }
+/* .page-top-btn a:hover{
+    color: royalblue;
+} */
+
 .page-top-btn .fas {
     font-size: 29px;
 }
