--- a/public/css/index.css
+++ b/public/css/index.css
@@ -174,6 +174,9 @@
     padding-right: calc(var(--bs-gutter-x) * 0.9);
     padding-left: calc(var(--bs-gutter-x) * 0.6);
 }
+
+
+
 .row a {
     color: #fff;
     text-decoration: none;
@@ -181,6 +184,22 @@
 .row a:nth-child(n + 5) {
     margin-top: 57px;
 }
+@media (max-width: 993px) {
+    .row a:nth-child(n + 4) {
+        margin-top: 40px;
+    }
+}
+@media (max-width: 769px) {
+    .row a:nth-child(n + 4) {
+        margin-top: 35px;
+    }
+}
+@media (max-width: 576px) {
+    .row a:nth-child(n + 3) {
+        margin-top: 25px;
+    }
+}
+
 .card {
     position: relative;
     height: 290px;
@@ -204,6 +223,7 @@
         width: 130px;
     }
 }
+
 .card:hover {
     transform: scale(1.02);
     transition-duration: 0.5s;
