--- a/public/css/show.css
+++ b/public/css/show.css
@@ -8,6 +8,7 @@
   width: auto;
   height: auto;
   color: #fff;
+
   font-size: 30px;
   font-family: 'せのびゴシック';
   background: -moz-linear-gradient(top, #355469, #1B2A35);
@@ -23,9 +24,13 @@
           main-top
 -------------------------------- */
 .main-container {
-  width: 100%;
+  width: 1300px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
+
+
+
 }
 .main-container .main-top {
   display: flex;
@@ -61,8 +66,11 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  /* margin-top: 50px; */
   color: #fff;
+}
+.page-top-left {
+  padding-top: 100px;
 }
 
 /* .page-top::after {
@@ -105,7 +113,7 @@
 ------------------- */
 .display {
   width: 100%;
-
+  margin-bottom: 100px;
 }
 .display-container {
   width: 100%;
@@ -178,6 +186,7 @@
   display: flex;
   align-items: center;
   padding-left: 29px;
+  margin: auto 0;
 }
 
 .right-middle {
@@ -195,11 +204,13 @@
   border-bottom: solid 1px #BAA68B;
   font-size: 20px;
   padding: 27px 0;
+  
 }
 
 .sentence {
   text-align: left;
   height: auto;
   letter-spacing: 0.2em
+  
 }
 
